# Chandra-HAL

./: .gitignore  LICENSE  README.md
Chandra HAL/: ICM20602.h  ICM42688.h  TODO  TODO.md  a.out  ad56x3r.h  adc.h  ads131a0x.h  air.h  arithmetic.h  array.h  atmosphere.h  barometric.h  binary_serialize.h  bitcount.h  bmp388.h  bmp390.h  bmx160.h  buffer_stream.h  chandra_core.cpp  chip_utils.h  chip_utils_template.h  chrono.h  circular_buffer.h  color.h  comparable.h  coordinates.h  crc.h  crc_core.h  crc_hw.h  crc_stream.h  crc_sw.h  crc_utils.h  cstr_utils.h  debounce.h  debug_stream.h  dimensions.h  dkf.h  flash_utils.h  format.h  (+72 more)
Chandra HAL/implementation/: chip_utils_template.h  chrono.h  gpio.h  lpc15xx_chip_utils.h  lpc55xx_chip_utils.h  lpc82x_chip_utils.h  lpc84x_chip_utils.h  lpc8xx_chip_utils.h  mock_chip_utils.h
Chandra HAL/mock/: imu.h  virt_serial.h
Chandra HAL/peripheral/: lpc_ctimer.h
Documentation/: TODO.md  users_guide.aux  users_guide.out  users_guide.tex  users_guide.toc
Documentation/Images/: imu_calibration_flow.eps
Documentation/_minted-users_guide/: 00546BD609FD7CB62F997E7BC1608E6143660024D5B6C4BBB467262C8B2D64CB.pygtex  (+48 more)
Tests/: CMakeLists.txt  README.md
Tests/src/: chandra_binary_serialization_tests.cpp  chandra_gravity_tests.cpp  chandra_imu_tests.cpp  chandra_matrix_tests.cpp  chandra_quantity_tests.cpp  chandra_tracker_protocol_tests.cpp  chandra_vector_tests.cpp
Utils/: build_units.py  generate_kalman.py  imu_calibrate.py  kalman_gen_test.def  kalman_gen_test_simple.def  kf_output_file.hpp  test_units.def  units.def
(+7 files in other folders)
